Bug 407974 - should url bar autocomplete results decode UTF-8 encoded urls?. r=dietrich, b-ff3=mconnor, a1.9b3=beltzner